# EEEE2065-Practical

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql.yml  super-linter.yml
Practical-1/: 2.1.cpp  CMakeLists.txt
Practical-1/2.2/: CMakeLists.txt  main.cpp  printData.cpp  printData.h  printMath.cpp  printMath.h
Practical-2/: CMakeLists.txt  dataTypes.cpp  dataTypes.h  practical-2.cpp  testMath.cpp  testMath.h
Practical-3/: .gitignore  CMakeLists.txt  main.cpp  practical3.cpp  practical3.h
Practical-4/: CMakeLists.txt  adventure-game.cpp  main.cpp  practical4.cpp  practical4.h
Practical-5/: CMakeLists.txt  adventure-game.cpp  main.cpp  practical5.cpp  practical5.h
Practical-6/: CMakeLists.txt  adventure-game.cpp  main.cpp  practical6.cpp  practical6.h
Practical-7/: CMakeLists.txt  adventure-game.cpp  main.cpp  practical7.cpp  practical7.h
Practical-8/: CMakeLists.txt  main.cpp  practical8.cpp  practical8.h
base/: CMakeLists.txt
